[package]
name = "mrms"
version = "0.1.0"
edition = "2021"

[dependencies]
commander = "0.1.5"
urlencoding = "1.0.1"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"

[profile.release]
lto = true
codegen-units = 16
opt-level = "s"
